<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/placeSettingsLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/add_place_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".frontend.MainActivity.PlaceSettingsDialogFragment">

    <TextView
        android:id="@+id/saveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/save_point_button"
        android:text="@string/save_changes_clickable_text"
        android:textColor="@color/titleBlue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeColorLayout" />

    <TextView
        android:id="@+id/deleteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/delete_point_button"
        android:text="@string/delete_place_clickable_text"
        android:textColor="@color/delteRed"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeColorLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/changeNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeSettingsDismissIcon">

        <TextView
            android:id="@+id/changeNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_name"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/changeNameBoxLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/changeNameBoxLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/change_name_field_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/placeNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/change_name_bar_hint"
                android:ems="10"
                android:hint="@string/change_name_bar_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/placeSettingsDismissIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/dismiss_icon_content_description"
        android:src="@drawable/ic_round_close_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/changeColorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeNameLayout">

        <ImageView
            android:id="@+id/changeColorRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/change_color_not_selected_bg"
            android:contentDescription="@string/red_color_mark_icon_content_description"
            android:src="@drawable/ic_baseline_circle_red_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/changeColorOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/change_color_not_selected_bg"
            android:contentDescription="@string/orange_color_mark_icon_content_description"
            android:src="@drawable/ic_baseline_circle_orange_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/changeColorRed"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/changeColorYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/change_color_not_selected_bg"
            android:contentDescription="@string/yellow_color_mark_icon_content_description"
            android:src="@drawable/ic_baseline_circle_yellow_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/changeColorOrange"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/changeColorPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/change_color_not_selected_bg"
            android:contentDescription="@string/pink_color_mark_icon_content_description"
            android:src="@drawable/ic_baseline_circle_pink_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/changeColorGreen"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/changeColorGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/change_color_not_selected_bg"
            android:contentDescription="@string/green_color_mark_icon_content_description"
            android:src="@drawable/ic_baseline_circle_green_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/changeColorYellow"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/changeColorPurple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/change_color_not_selected_bg"
            android:contentDescription="@string/purple_color_mark_icon_content_description"
            android:src="@drawable/ic_baseline_circle_purple_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/changeColorPink"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/changeColorBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/change_color_not_selected_bg"
            android:contentDescription="@string/blue_color_mark_icon_content_description"
            android:src="@drawable/ic_baseline_circle_blue_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/changeColorPurple"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/changeColorNavyBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/change_color_not_selected_bg"
            android:contentDescription="@string/navy_blue_color_mark_icon_content_description"
            android:src="@drawable/ic_baseline_circle_navy_blue_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/changeColorBlue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/placeSettingsCoordinatesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/placeSettingsDismissIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/placeSettingsDismissIcon">

        <TextView
            android:id="@+id/placeSettingsLatitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lat"
            android:textColor="@color/coordinates_blue"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/placeSettingsLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/lat_value"
            android:text="@string/latitude_placeholder"
            android:textColor="@color/coordinates_blue"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/placeSettingsLatitudeText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/placeSettingsLongitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lon"
            android:textColor="@color/coordinates_blue"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeSettingsLatitudeText" />

        <TextView
            android:id="@+id/placeSettingsLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/long_value"
            android:text="@string/longitude_placeholder"
            android:textColor="@color/coordinates_blue"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/placeSettingsLatitude"
            app:layout_constraintTop_toBottomOf="@+id/placeSettingsLatitude" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>